# autoencoder

./: .gitignore  Cargo.toml  README.md
data/: .gitignore
src/: activations.rs  data_set.rs  logger.rs  main.rs  matrix.rs  metrics_logger.rs  network.rs  utils.rs
